--- a/ML/notes/Random-Stuff.ipynb
+++ b/ML/notes/Random-Stuff.ipynb
@@ -15,7 +15,16 @@
     "#import cv2\n",
     "#cv2.__version__\n",
     "#from vocabulary import *\n",
-    "#print(DUR[0])"
+    "#print(DUR[0])\n",
+    "# V1\n",
+    "with tf.Graph().as_default() as g:\n",
+    "    print('type(g)', type(g)) # type(g) <class 'tensorflow.python.framework.ops.Graph'>\n",
+    "\n",
+    "    tf.import_graph_def(original_gdef, name='')\n",
+    "\n",
+    "    model_vars = tf.get_collection(tf.GraphKeys.GLOBAL_VARIABLES)\n",
+    "    print('type(model_vars)', type(model_vars))\n",
+    "    print('model_vars', model_vars)"
    ]
   },
   {
@@ -24,6 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "#SAVEDMODEL from checkpoint\n",
     "import os\n",
     "import tensorflow.compat.v1 as tf\n",
